--- a/flight-search/package.json
+++ b/flight-search/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "amadeus": "^5.7.1",
     "dotenv": "^10.0.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "favicons": "^7.0.0-beta.4"
   }
 }
