--- a/flight-search/package.json
+++ b/flight-search/package.json
@@ -10,6 +10,7 @@
     "amadeus": "^5.7.1",
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
-    "favicons": "^7.0.0-beta.4"
+    "favicons": "^7.0.0-beta.4",
+    "qrcode-svg": "^1.1.0"
   }
 }
